--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,13 @@ pip-log.txt
 !images/README.html
 !docs/README.html
 !lib/README.html
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
